--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -6,15 +6,15 @@
 #    By: egomes <egomes@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/01 17:52:48 by egomes            #+#    #+#              #
-#    Updated: 2022/03/01 18:19:13 by egomes           ###   ########.fr        #
+#    Updated: 2022/03/03 21:06:42 by egomes           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = phonebook.cpp
+SRC = main.cpp Contact.cpp
 
 NAME = phonebook
 
-CC = G++
+CC = c++
 
 CFLAGS = -Wall -Wextra -Werror
 
