--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -5,14 +5,14 @@
 #                                                     +:+ +:+         +:+      #
 #    By: egomes <egomes@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/04/15 14:22:17 by egomes            #+#    #+#              #
-#    Updated: 2022/04/15 14:22:22 by egomes           ###   ########.fr        #
+#    Created: 2022/04/15 14:22:01 by egomes            #+#    #+#              #
+#    Updated: 2022/04/19 22:54:22 by egomes           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = main.cpp
+SRC = main.cpp Bureaucrat.cpp Form.cpp ShrubberyCreationForm.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp
 
-NAME = interface
+NAME = form
 
 CC = c++
 
